site name update

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "code",
-  "short_name": "code",
+  "name": "ThePlaceToEat",
+  "short_name": "TPTE",
   "icons": [
     {
       "src": "/img/icons/android-chrome-192x192.png",
